@@ -17,6 +17,8 @@
 2010-05-17  6.6.2-0 Cristy  <quetzlzacatenango@image...>
   * PSD images require a proper layer to support an alpha channel.
   * Enable PFM endian support.
+  * Add context to -border for montage.  Inside the parenthesis it adds a border
+    to the image otherwise it sets the border for the layout manager.
 
 2010-05-15  6.6.1-10 Cristy  <quetzlzacatenango@image...>
   * Use ScaleCharToQuantum() in coders/src.c (reference
